--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -37,6 +37,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 16.14.2
+          cache: 'npm'
 
       # Set up JDK 22 with GraalVM
       - name: Set up JDK 22 with GraalVM
