--- a/package.json
+++ b/package.json
@@ -16,21 +16,30 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "i18next": "^23.16.0",
+    "i18next-http-backend": "^2.6.2",
     "rapidoc": "^9.3.8",
     "react": "^18.0.0",
     "react-bootstrap": "^2.10.5",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-i18next": "^15.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-react": "^7.16.5",
     "babel-loader": "^8.2.3",
+    "browser-sync": "^2.29.3",
+    "browser-sync-webpack-plugin": "^2.3.0",
     "copy-webpack-plugin": "12.0.2",
     "css-loader": "^6.5.1",
+    "css-minimizer-webpack-plugin": "^7.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "merge-jsons-webpack-plugin": "^2.0.1",
+    "mini-css-extract-plugin": "^2.9.1",
     "rimraf": "^3.0.2",
     "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.10",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.3",
