--- a/package.json
+++ b/package.json
@@ -28,18 +28,26 @@
     "@babel/core": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-react": "^7.16.5",
+    "@types/node": "^22.7.7",
+    "@types/react": "^18.3.11",
+    "@types/react-bootstrap": "^0.32.37",
+    "@types/react-dom": "^18.3.1",
+    "@types/webpack-env": "^1.18.5",
     "babel-loader": "^8.2.3",
     "browser-sync": "^2.29.3",
     "browser-sync-webpack-plugin": "^2.3.0",
     "copy-webpack-plugin": "12.0.2",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^7.0.0",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
     "html-webpack-plugin": "^5.5.0",
     "merge-jsons-webpack-plugin": "^2.0.1",
     "mini-css-extract-plugin": "^2.9.1",
     "rimraf": "^3.0.2",
     "style-loader": "^3.3.4",
     "terser-webpack-plugin": "^5.3.10",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.6.3",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.3",
