--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "css-minimizer-webpack-plugin": "^7.0.0",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "html-webpack-plugin": "^5.5.0",
+    "i18next-resources-for-ts": "^1.5.0",
     "merge-jsons-webpack-plugin": "^2.0.1",
     "mini-css-extract-plugin": "^2.9.1",
     "rimraf": "^3.0.2",
