--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "java:jar:prod": "npm run java:jar -- -Pprod"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "bootstrap": "^5.3.3",
     "i18next": "^23.16.0",
     "i18next-http-backend": "^2.6.2",
@@ -22,7 +23,8 @@
     "react": "^18.0.0",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.0.0",
-    "react-i18next": "^15.0.3"
+    "react-i18next": "^15.0.3",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
@@ -32,6 +34,7 @@
     "@types/react": "^18.3.11",
     "@types/react-bootstrap": "^0.32.37",
     "@types/react-dom": "^18.3.1",
+    "@types/react-redux": "^7.1.34",
     "@types/webpack-env": "^1.18.5",
     "babel-loader": "^8.2.3",
     "browser-sync": "^2.29.3",
