--- a/package.json
+++ b/package.json
@@ -36,18 +36,22 @@
     "@types/react-dom": "^18.3.1",
     "@types/react-redux": "^7.1.34",
     "@types/webpack-env": "^1.18.5",
+    "autoprefixer": "^10.4.20",
     "babel-loader": "^8.2.3",
     "browser-sync": "^2.29.3",
     "browser-sync-webpack-plugin": "^2.3.0",
     "copy-webpack-plugin": "12.0.2",
-    "css-loader": "^6.5.1",
+    "css-loader": "^6.11.0",
     "css-minimizer-webpack-plugin": "^7.0.0",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "html-webpack-plugin": "^5.5.0",
     "i18next-resources-for-ts": "^1.5.0",
     "merge-jsons-webpack-plugin": "^2.0.1",
     "mini-css-extract-plugin": "^2.9.1",
+    "postcss-loader": "^8.1.1",
     "rimraf": "^3.0.2",
+    "sass": "1.77.6",
+    "sass-loader": "^16.0.2",
     "style-loader": "^3.3.4",
     "terser-webpack-plugin": "^5.3.10",
     "ts-loader": "^9.5.1",
